[metadata]
name = easykube
version = 0.1.0
description = Simple, asynchronous Python client for Kubernetes.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/easykube


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    httpx
