[metadata]
name = easykube
description = Simple, asynchronous Python client for Kubernetes.
long_description = file: README.md
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/easykube


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    httpx
    pyyaml
